# books

./: pyproject.toml
books/: __init__.py  books_db.py  exceptions.py  main.py
books/resources/: _result_source_img.html  _result_source_tag.html  _search_source_img.html  _search_source_tag.html  _zero_results.html  books.html  index.html  resource.py
books/routes/: api_routes.py  ui_routes.py
books/views/: search_results.py
books/views/templates/: _book_detail.html  _results.html
design/: Books Demo.bsdesign  books.html  index.html
design/assets/css/: styles.css
