[tool.poetry]
name = "books"
version = "0.1.0"
description = ""
authors = ["Arnon Moscona <arnon.moscona@syapse.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
fastapi = "^0.68.0"
devtools = "^0.6.1"
uvicorn = "^0.14.0"
aiofiles = "*"
Jinja2 ="*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
